tests/purs/failing/NestedRecordLabelOnTypeError.out
Error found:
in module [33mNestedRecordLabelOnTypeError[0m
at tests/purs/failing/NestedRecordLabelOnTypeError.purs:5:10 - 5:22 (line 5, column 10 - line 5, column 22)

  Could not match type
  [33m    [0m
  [33m  ()[0m
  [33m    [0m
  with type
  [33m                [0m
  [33m  ( field :: Int[0m
  [33m  | t0          [0m
  [33m  )             [0m
  [33m                [0m

while checking that expression [33m{ field: 1[0m
                               [33m}         [0m
  has type [33m{ a :: { b :: { c :: Int[0m
           [33m              }         [0m
           [33m       }                [0m
           [33m}                       [0m
in value declaration [33mrecord[0m

where [33mt0[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/TypesDoNotUnify.md for more information,
or to contribute content related to this error.

